// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Result/> render() should render with SKU as subtitle 1`] = `
<div
  class="container"
>
  <div
    class="imgContainer"
  >
    <img
      alt="Alt"
      class="img"
      src="test-file-stub"
    />
  </div>
  <div
    class="legend"
  >
    <div
      class="title"
    >
      Product 1
    </div>
    <div
      class="subtitle"
    >
      SKU: 11111
    </div>
  </div>
  <div
    class="stock grey"
  >
    Inventory not tracked
  </div>
</div>
`;

exports[`<Result/> render() should render with default image 1`] = `
<div
  class="container"
>
  <div
    class="imgContainer"
  >
    <img
      alt="Product"
      class="img"
      src="test-file-stub"
    />
  </div>
  <div
    class="legend"
  >
    <div
      class="title"
    >
      Title
    </div>
    <div
      class="subtitle"
    >
      Subtitle
    </div>
  </div>
  <div
    class="stock"
  >
    <span
      class="grey"
    >
      1
    </span>
     
    in stock
     
  </div>
</div>
`;

exports[`<Result/> render() should render with disabled style 1`] = `
<div
  class="container"
>
  <div
    class="imgContainer"
  >
    <img
      alt="alt"
      class="img"
      src="https://foo.bar/image.jpg"
    />
  </div>
  <div
    class="legend"
  >
    <div
      class="title"
    >
      Title
    </div>
    <div
      class="subtitle"
    >
      Subtitle
    </div>
  </div>
  <div
    class="stock disabled"
  >
    <span
      class="grey"
    >
      1
    </span>
     
    in stock
     
  </div>
</div>
`;

exports[`<Result/> render() should render with image and subtitle 1`] = `
<div
  class="container"
>
  <div
    class="imgContainer"
  >
    <img
      alt="alt"
      class="img"
      src="https://foo.bar/image.jpg"
    />
  </div>
  <div
    class="legend"
  >
    <div
      class="title"
    >
      Title
    </div>
    <div
      class="subtitle"
    >
      Subtitle
    </div>
  </div>
  <div
    class="stock"
  >
    <span
      class="grey"
    >
      1
    </span>
     
    in stock
     
  </div>
</div>
`;

exports[`<Result/> render() should render with number of variants as subtitle 1`] = `
<div
  class="container"
>
  <div
    class="imgContainer"
  >
    <img
      alt="Alt"
      class="img"
      src="test-file-stub"
    />
  </div>
  <div
    class="legend"
  >
    <div
      class="title"
    >
      Product 1
    </div>
    <div
      class="subtitle"
    >
      2 variants
    </div>
  </div>
  <div
    class="stock grey"
  >
    Inventory not tracked
  </div>
</div>
`;

exports[`<Result/> render() should render with product negative stock quantity 1`] = `
<div
  class="container"
>
  <div
    class="imgContainer"
  >
    <img
      alt="Alt"
      class="img"
      src="test-file-stub"
    />
  </div>
  <div
    class="legend"
  >
    <div
      class="title"
    >
      Product 1
    </div>
    <div
      class="subtitle"
    >
      2 variants
    </div>
  </div>
  <div
    class="stock"
  >
    <span
      class="danger"
    >
      -8,990
    </span>
     
    in stock
     
    for 2 variants
  </div>
</div>
`;

exports[`<Result/> render() should render with product stock quantity 1`] = `
<div
  class="container"
>
  <div
    class="imgContainer"
  >
    <img
      alt="Alt"
      class="img"
      src="test-file-stub"
    />
  </div>
  <div
    class="legend"
  >
    <div
      class="title"
    >
      Product 1
    </div>
    <div
      class="subtitle"
    >
      SKU: 11111
    </div>
  </div>
  <div
    class="stock"
  >
    <span
      class="success"
    >
      99
    </span>
     
    in stock
     
  </div>
</div>
`;

exports[`<Result/> render() should render with product stock quantity 2`] = `
<div
  class="container"
>
  <div
    class="imgContainer"
  >
    <img
      alt="Alt"
      class="img"
      src="test-file-stub"
    />
  </div>
  <div
    class="legend"
  >
    <div
      class="title"
    >
      Product 1
    </div>
    <div
      class="subtitle"
    >
      SKU: 11111
    </div>
  </div>
  <div
    class="stock"
  >
    <span
      class="grey"
    >
      1
    </span>
     
    in stock
     
  </div>
</div>
`;

exports[`<Result/> render() should render with product title as title, and SKU as subtitle 1`] = `
<div
  class="container"
>
  <div
    class="imgContainer"
  >
    <img
      alt="Alt"
      class="img"
      src="test-file-stub"
    />
  </div>
  <div
    class="legend"
  >
    <div
      class="title"
    >
      Product 1
    </div>
    <div
      class="subtitle"
    >
      SKU: 11111
    </div>
  </div>
  <div
    class="stock grey"
  >
    Inventory not tracked
  </div>
</div>
`;

exports[`<Result/> render() should render with product total stock quantity of all variants 1`] = `
<div
  class="container"
>
  <div
    class="imgContainer"
  >
    <img
      alt="Alt"
      class="img"
      src="test-file-stub"
    />
  </div>
  <div
    class="legend"
  >
    <div
      class="title"
    >
      Product 1
    </div>
    <div
      class="subtitle"
    >
      2 variants
    </div>
  </div>
  <div
    class="stock"
  >
    <span
      class="success"
    >
      30
    </span>
     
    in stock
     
    for 2 variants
  </div>
</div>
`;

exports[`<Result/> render() should render with variant title in title 1`] = `
<div
  class="container"
>
  <div
    class="imgContainer"
  >
    <img
      alt="Alt"
      class="img"
      src="test-file-stub"
    />
  </div>
  <div
    class="legend"
  >
    <div
      class="title"
    >
      Product 1 - Variant 2
    </div>
    <div
      class="subtitle"
    >
      SKU: 22222
    </div>
  </div>
  <div
    class="stock grey"
  >
    Inventory not tracked
  </div>
</div>
`;

exports[`<Result/> render() should render without product stock quantity 1`] = `
<div
  class="container"
>
  <div
    class="imgContainer"
  >
    <img
      alt="alt"
      class="img"
      src="https://foo.bar/image.jpg"
    />
  </div>
  <div
    class="legend"
  >
    <div
      class="title"
    >
      Title
    </div>
    <div
      class="subtitle"
    >
      Subtitle
    </div>
  </div>
  <div
    class="stock grey"
  >
    Inventory not tracked
  </div>
</div>
`;

exports[`<Result/> render() should render without product stock quantity because the inventory is not tracked 1`] = `
<div
  class="container"
>
  <div
    class="imgContainer"
  >
    <img
      alt="Alt"
      class="img"
      src="test-file-stub"
    />
  </div>
  <div
    class="legend"
  >
    <div
      class="title"
    >
      Product 1
    </div>
    <div
      class="subtitle"
    >
      SKU: 11111
    </div>
  </div>
  <div
    class="stock grey"
  >
    Inventory not tracked
  </div>
</div>
`;

exports[`<Result/> render() should render without subtitle 1`] = `
<div
  class="container"
>
  <div
    class="imgContainer"
  >
    <img
      alt="alt"
      class="img"
      src="https://foo.bar/image.jpg"
    />
  </div>
  <div
    class="legend"
  >
    <div
      class="title"
    >
      Title
    </div>
  </div>
  <div
    class="stock"
  >
    <span
      class="grey"
    >
      1
    </span>
     
    in stock
     
  </div>
</div>
`;

exports[`<Result/> render() should render without subtitle 2`] = `
<div
  class="container"
>
  <div
    class="imgContainer"
  >
    <img
      alt="Alt"
      class="img"
      src="test-file-stub"
    />
  </div>
  <div
    class="legend"
  >
    <div
      class="title"
    >
      Product 1
    </div>
  </div>
  <div
    class="stock grey"
  >
    Inventory not tracked
  </div>
</div>
`;

exports[`<Result/> render() should render without subtitle 3`] = `
<div
  class="container"
>
  <div
    class="imgContainer"
  >
    <img
      alt="Alt"
      class="img"
      src="test-file-stub"
    />
  </div>
  <div
    class="legend"
  >
    <div
      class="title"
    >
      Product 1
    </div>
  </div>
  <div
    class="stock grey"
  >
    Inventory not tracked
  </div>
</div>
`;
